--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,7 +6,12 @@
     <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
-    <h1>Hello?</h1>
+    <div class="options">
+
+    </div>
+    <div class="queue">
+
+    </div>
 <script src="../js/client/titlebar.js"></script>
   </body>
 </html>
